# meteo

./: Dockerfile  docker-compose.yml  pyproject.toml
src/: config.py  main.py
