[tool.poetry]
name = "meteo"
version = "0.1.0"
description = ""
authors = ["Aleksandr Sharshavin <aleksandr.sharshavin@cifrasoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pydantic = "^2.11.5"
pydantic-settings = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
